--- a/index.html
+++ b/index.html
@@ -4,36 +4,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   <link rel="stylesheet" href="./css/style.css" />
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-
-  </style>
 </head>
 
 <body>
-  <div class="card">
-    <img class="qr-image" src="./images/image-qr-code.png" />
+
+  <main class="card">
+    <img class="qr-image" src="./images/image-qr-code.png" alt="a qr-code image" />
     <h1 class="card-title">
       Improve your front-end skills by building projects
     </h1>
-    <br> <p class="card-text">
+    <br>
+    <p class="card-text">
       Scan the QR code to visit Frontend Mentor and take your coding skills
       to the next level
-      
     </p>
-   <div></div>
-  </div>
-  <div class="attribution">
+    <div></div>
+  </main>
+
+
+  <footer class="attribution">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
       href="https://www.linkedin.com/in/rynex-akil/" target="_blank">Rynex Akil</a>.
-  </div>
+  </footer>
+
 </body>
 
 </html>
